# stockforecaster

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  tuning.yaml
results/: test.csv  tuning.csv
src/: cli.py
src/utils/: config.py  data_classes.py  data_preparation.py  data_preprocessing.py  evaluation.py  file_handling.py  models.py  plotting.py
