[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stockforecaster"
version = "0.1"
description = "RNN for Stock Return Forecasting"
authors = [{ name = "Dominic Reichl", email = "office@dominicreichl.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.2",
    "click==8.1.7",
    "scikit-learn==1.3.2",
    "tensorflow-cpu==2.14.1",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "optuna==3.5.0",
    "ta==0.11.0",
    "pytrends==4.9.2",
    "PyQt5==5.15.2",
    "yfinance==0.2.33",
    "holidays==0.39",
]

[project.scripts]
sf = "cli:cli"
